# zjstatus-hints

./: CLAUDE.md  Cargo.toml  LICENSE.md  README.md  dprint.json  mise.toml  rust-toolchain.toml
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: lint.yml  release.yml
src/: main.rs  ui.rs
src/tip/data/: compact_layout.rs  edit_scrollbuffer.rs  floating_panes_mouse.rs  quicknav.rs
