[package]
name = "zjstatus-hints"
version = "0.1.1"
authors = ["Maddison Hellstrom <hi@maddison.io>", "Brooks J Rady <b.j.rady@gmail.com>"]
edition = "2021"
license = "MIT"
rust-version = "1.84"

[dependencies]
ansi_term = "0.12"
colored = "2"
lazy_static = "1.4.0"
rand = "0.8.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0.30"
unicode-width = "0.1.8"
zellij-tile = "0.42.2"
zellij-tile-utils = "0.42.2"

[dev-dependencies]
regex = "1"
